getting a gigs page fleshed out and hooked up

--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en" ng-app="skillcat">
+<html lang="en" ng-app="myApp">
 <head>
   <meta charset="utf-8">
-  <title>Jason&rsquo;s Skill Gallery</title>
+  <title>Jason Nerothin</title>
   <link rel="stylesheet" href="css/app.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <script src="lib/angular/angular.js"></script>
