--- a/app/index.html
+++ b/app/index.html
@@ -10,11 +10,55 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/jquery.min.js"></script>
   <script src="lib/angular/angular-resource.js"></script>
 </head>
 <body>
 
-  <div ng-view></div>
+<div class="container-fluid">
+
+    <div class="row-fluid">
+        <!-- header -->
+        <h1>Jason Nerothin</h1>
+        <h4>Under construction</h4>
+    </div>
+
+    <!--Sidebar content-->
+    <div class="row-fluid span3" style="margin-top:0.5em;">
+        <div class="mynav">
+            <a href="#/bio" ng-class="a" ng-click="a='selected';b='';c='';d='';e='';">bio</a>&nbsp;|&nbsp;
+            <a href="#/skills" ng-class="b" ng-click="a='';b='selected';c='';d='';e='';">skills</a>&nbsp;|&nbsp;
+            <a href="#/gigs" ng-class="c" ng-click="a='s';b='';c='selected';d='';e='';">gigs</a>&nbsp;|&nbsp;
+            <a href="#/portfolio" ng-class="d" ng-click="a='';b='';c='';d='selected';e='';">portfolio</a>&nbsp;|&nbsp;
+            <a href="#/edu" ng-class="e" ng-click="a='';b='';c='';d='';e='selected';">edu</a>
+        </div>
+    </div>
+
+    <!--Body content-->
+    <div class="row-fluid span10" ng-view>
+    </div>
+
+    <!-- temporary hack until i get around to improving it -->
+    <div class="row-fluid socialbutts">
+        <h1>&nbsp;</h1>
+        <a href="http://www.linkedin.com/in/jasonnerothin">
+            <img src="http://www.linkedin.com/img/webpromo/btn_profile_greytxt_80x15.png" width="80" height="15" border="0" style="margin:3px 5px 0px 15px" alt="View Jason Nerothin's profile on LinkedIn">
+        </a>
+        <a href="http://www.facebook.com/jason.nerothin" title="Jason Nerothin">
+            <img src="http://badge.facebook.com/badge/1666973298.3198.931982756.png" style="border: 0px; margin:6px 28px 0px 16px" />
+        </a>
+        <a href="//plus.google.com/117461010737202575238?prsrc=3" rel="publisher" style="text-decoration:none; margin-right: 30px;">
+            <img src="//ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:22px;height:22px;"/>
+        </a>
+        <a href="http://twitter.com/jasonnerothin">
+            <img src="http://labs.creazy.net/twignature/img/jasonnerothin.gif" alt="twitter / jasonnerothin" />
+        </a>
+        <a href="https://github.com/jasonnerothin/angular-phonecat">
+            <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+        </a>
+    </div>
+
+</div>
 
 </body>
 </html>
