Skill-lists looking better.

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
     <div class="row-fluid">
         <!-- header -->
         <h1>Jason Nerothin</h1>
-        <h4>Under construction</h4>
+        <h4 class="uc">Under construction</h4>
     </div>
 
     <!--Sidebar content-->
