de-emphasizing "under construction"

--- a/app/index.html
+++ b/app/index.html
@@ -21,19 +21,17 @@
 <div class="container-fluid">
 
     <div class="row-fluid">
-        <!-- header -->
         <h1>Jason Nerothin</h1>
-        <h4 class="uc">Under construction</h4>
     </div>
 
     <!--Sidebar content-->
-    <div>
-        <a href="#/bio" ng-class="a" ng-click="a='selected';b='';c='';d='';e='';f='';" class="btn-info btn-mini">bio</a>
-        <a href="#/gigs" ng-class="c" ng-click="a='s';b='';c='selected';d='';e='';f='';" class="btn-info btn-mini">gigs</a>
-        <a href="#/skills" ng-class="b" ng-click="a='';b='selected';c='';d='';e=''; f=''" class="btn-info btn-mini">skills</a>
-        <a href="#/portfolio" ng-class="d" ng-click="a='';b='';c='';d='selected';e=''; f=''" class="btn-info btn-mini">portfolio</a>
-        <a href="#/edu" ng-class="e" ng-click="a='';b='';c='';d='';e='selected'; f='';" class="btn-info btn-mini">edu</a>
-        <a href="#/contact" ng-class="f" ng-click="a='';b='';c='';d='';e=''; f='selected';" class="btn-info btn-mini">contact</a>
+    <div class="mynav">
+        <a href="#/bio" ng-class="a" ng-click="a='selected';b='';c='';d='';e='';f='';" class="btn-info">bio</a>
+        <a href="#/gigs" ng-class="c" ng-click="a='s';b='';c='selected';d='';e='';f='';" class="btn-info">gigs</a>
+        <a href="#/skills" ng-class="b" ng-click="a='';b='selected';c='';d='';e=''; f=''" class="btn-info">skills</a>
+        <a href="#/portfolio" ng-class="d" ng-click="a='';b='';c='';d='selected';e=''; f=''" class="btn-info">portfolio</a>
+        <a href="#/edu" ng-class="e" ng-click="a='';b='';c='';d='';e='selected'; f='';" class="btn-info">edu</a>
+        <a href="#/contact" ng-class="f" ng-click="a='';b='';c='';d='';e=''; f='selected';" class="btn-info">contact</a>
     </div>
 
     <!--Body content-->
