--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Jason Nerothin</title>
-    <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/gig-list.css">
+    <link rel="stylesheet" href="css/gig-detail.css">
+    <link rel="stylesheet" href="css/skill-list.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <!-- angular js -->
