Updating github url.

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
         <a href="http://twitter.com/jasonnerothin">
             <img src="http://labs.creazy.net/twignature/img/jasonnerothin.gif" alt="twitter / jasonnerothin"/>
         </a>
-        <a href="https://github.com/jasonnerothin/angular-phonecat">
+        <a href="https://github.com/jasonnerothin/jasonnerothin.com">
             <img style="position: absolute; top: 0; right: 0; border: 0;"
                  src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
         </a>
